ingress/vue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-app-ingress
  namespace: mamikos-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /vue
        pathType: Prefix
        backend:
          service:
            name: vuejs-app 
            port:
              number: 8080
